pulled generateWhitnes up into AbstractSolverIntegratedPathsearch. Advanced Thesis, TyrePump.c implementation is finally error free.